5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4501/executions/1831_1640.log
== TEST (2019-06-13 16:43:48) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=0
for i in range(size(a)):
	if(a[i]%2!=0):
		b=b+1
c=zeros(size(a), dtype=int)	
d=0
for i in range(size(a)):
	if(a[i]%2!=0)
		c[d]=i
		d=d+1
print(c)		
-- ERROR:
File "XXXX", line 10
    if(a[i]%2!=0)
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:44:04) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=0
for i in range(size(a)):
	if(a[i]%2!=0):
		b=b+1
c=zeros(size(a), dtype=int)	
d=0
for i in range(size(a)):
	if(a[i]%2!=0):
		c[d]=i
		d=d+1
print(c)		
-- EXECUTION TIME:
0.916842
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
7
[ 2  3  4  5  7  9 10]
---- user output:
[ 2  3  4  5  7  9 10  0  0  0  0  0  0]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
4
[2 3 5 6]
---- user output:
[2 3 5 6 0 0 0 0 0]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[2 3 5]
---- user output:
[2 3 5 0 0 0 0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:08) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=0
for i in range(size(a)):
	if(a[i]%2!=0):
		b=b+1
c=zeros(size(a), dtype=int)	
d=0
for i in range(size(a)):
	if(a[i]%2!=0):
		c[d]=i
		d=d+1
print(c)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:44:56) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=0
for i in range(size(a)):
	if(a[i]%2!=0):
		b=b+1
c=zeros(b, dtype=int)	
d=0
for i in range(size(a)):
	if(a[i]%2!=0):
		c[d]=i
		d=d+1
print(c)		
-- EXECUTION TIME:
0.948635
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
7
[ 2  3  4  5  7  9 10]
---- user output:
[ 2  3  4  5  7  9 10]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
4
[2 3 5 6]
---- user output:
[2 3 5 6]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[2 3 5]
---- user output:
[2 3 5]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 16:44:58) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=0
for i in range(size(a)):
	if(a[i]%2!=0):
		b=b+1
c=zeros(b, dtype=int)	
d=0
for i in range(size(a)):
	if(a[i]%2!=0):
		c[d]=i
		d=d+1
print(c)		
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 16:45:23) 
-- CODE:
from numpy import*
a=array(eval(input("vetor: ")))
b=0
for i in range(size(a)):
	if(a[i]%2!=0):
		b=b+1
c=zeros(b, dtype=int)	
d=0
for i in range(size(a)):
	if(a[i]%2!=0):
		c[d]=i
		d=d+1
print(d)		
print(c)		
-- EXECUTION TIME:
1.21194
-- TEST CASE 1:
---- input:
[10,20,31,1,13,15,20,33,36,63,25,10,2]
---- correct output:
7
[ 2  3  4  5  7  9 10]
---- user output:
7
[ 2  3  4  5  7  9 10]
-- TEST CASE 2:
---- input:
[10,20,31,15,36,63,25,10,2]
---- correct output:
4
[2 3 5 6]
---- user output:
4
[2 3 5 6]
-- TEST CASE 3:
---- input:
[10,20,31,15,36,63,26,10,2]
---- correct output:
3
[2 3 5]
---- user output:
3
[2 3 5]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
